# Pytorch-Dynamic-TSN

./: .gitignore  CMakeLists.txt  README.md  environment.yml  main.py  requirements.txt  setup.py  test.py  test_dataset.py  test_options.py
core/: appxrankpool.cpp  experiment.py
core/cli/: __init__.py
core/cli/dataset/download/: __init__.py  clients.py
core/cli/dataset_cli/: __init__.py
core/cli/dataset_cli/download/: __init__.py  clients.py
core/cli/preprocess_cli/: __init__.py  appx_rank_pooling.py  dense_flow.py
core/dataset/: __init__.py  action_frame_dataset.py  aggression.py  aggression_dataset.py  base.py  base_dataset.py  frame_dataset.py  image_dataset.py  saa_agg_dataset.py  temporal_dataset.py  tsn_dataset.py  utils.py
core/dataset/functionals/: __init__.py  frame_loaders.py  group_transforms.py
core/dataset/utils/: __init__.py  group_transforms.py  single_transforms.py  transforms.py  videoframe.py
core/models/: __init__.py  base.py  base_model.py  resnext_32x4d.py  resnext_model.py  tsn.py  tsn_model.py
core/models/dynamic_image_net/: nn.py
core/models/temporal_segment_net/: nn.py
core/networks/: __init__.py
core/networks/functionals/: consensus.py
core/options/: base_options.py  test_options.py  train_options.py
core/utils/: file_system.py
dynamic_tsn/models/: base.py  base_model.py  tsn.py
functests/: __init__.py  test_dataloader.py  test_dataset.py  test_network_utils.py  test_options.py
notebooks/: generate_aggression_split.ipynb
scripts/: build_appxrankpool.sh  generate_list.sh  rankpool_cli.py
(+6 files in other folders)
